@@ -27,21 +27,28 @@ import java.net.URL;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
+import java.util.LinkedHashMap;
+import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.ListIterator;
 import java.util.Map;
 import java.util.Properties;
 import java.util.Set;
 import java.util.StringTokenizer;
+import java.util.jar.Manifest;
+import java.util.stream.Collectors;
+import java.util.stream.StreamSupport;
 
 import org.eclipse.jetty.start.Props.Prop;
 import org.eclipse.jetty.start.config.ConfigSource;
 import org.eclipse.jetty.start.config.ConfigSources;
 import org.eclipse.jetty.start.config.DirConfigSource;
 import org.eclipse.jetty.util.JavaVersion;
+import org.eclipse.jetty.util.ManifestUtils;
 
 /**
  * The Arguments required to start Jetty.
@@ -59,15 +66,11 @@ public class StartArgs
         // Use META-INF/MANIFEST.MF versions
         if (ver == null)
         {
-            Package pkg = StartArgs.class.getPackage();
-            if ((pkg != null) && "Eclipse.org - Jetty".equals(pkg.getImplementationVendor()) && (pkg.getImplementationVersion() != null))
-            {
-                ver = pkg.getImplementationVersion();
-                if (tag == null)
-                {
-                    tag = "jetty-" + ver;
-                }
-            }
+            ver = ManifestUtils.getManifest(StartArgs.class)
+                    .map(Manifest::getMainAttributes)
+                    .filter(attributes -> "Eclipse Jetty Project".equals(attributes.getValue("Implementation-Vendor")))
+                    .map(attributes -> attributes.getValue("Implementation-Version"))
+                    .orElse(null);
         }
 
         // Use jetty-version.properties values
@@ -82,9 +85,9 @@ public class StartArgs
                     props.load(in);
                     ver = props.getProperty("jetty.version");
                 }
-                catch (IOException ignore)
+                catch (IOException x)
                 {
-                    StartLog.debug(ignore);
+                    StartLog.debug(x);
                 }
             }
         }
@@ -94,23 +97,25 @@ public class StartArgs
         {
             ver = "0.0";
             if (tag == null)
-            {
                 tag = "master";
-            }
+        }
+        else
+        {
+            if (tag == null)
+                tag = "jetty-" + ver;
         }
 
         // Set Tag Defaults
-        if (tag == null || tag.contains("-SNAPSHOT"))
-        {
+        if (tag.contains("-SNAPSHOT"))
             tag = "master";
-        }
 
         VERSION = ver;
-        System.setProperty("jetty.version",VERSION);
-        System.setProperty("jetty.tag.version",tag);
+        System.setProperty("jetty.version", VERSION);
+        System.setProperty("jetty.tag.version", tag);
     }
 
-    private static final String SERVER_MAIN = "org.eclipse.jetty.xml.XmlConfiguration";
+    private static final String MAIN_CLASS = "org.eclipse.jetty.xml.XmlConfiguration";
+    private static final String MODULE_MAIN_CLASS = "org.eclipse.jetty.xml/org.eclipse.jetty.xml.XmlConfiguration";
 
     private final BaseHome baseHome;
 
@@ -131,6 +136,13 @@ public class StartArgs
 
     /** List of all active [xml] sections from enabled modules */
     private List<Path> xmls = new ArrayList<>();
+
+    /** List of all active [jpms] sections for enabled modules */
+    private Set<String> jmodAdds = new LinkedHashSet<>();
+    private Map<String, Set<String>> jmodPatch = new LinkedHashMap<>();
+    private Map<String, Set<String>> jmodOpens = new LinkedHashMap<>();
+    private Map<String, Set<String>> jmodExports = new LinkedHashMap<>();
+    private Map<String, Set<String>> jmodReads = new LinkedHashMap<>();
 
     /** JVM arguments, found via command line and in all active [exec] sections from enabled modules */
     private List<String> jvmArgs = new ArrayList<>();
@@ -174,6 +186,7 @@ public class StartArgs
     private boolean listConfig = false;
     private boolean version = false;
     private boolean dryRun = false;
+    private boolean jpms = false;
     private boolean createStartd = false;
     private boolean updateIni = false;
     private String mavenBaseUri;
@@ -403,8 +416,7 @@ public class StartArgs
             return;
         }
 
-        List<String> sortedKeys = new ArrayList<>();
-        sortedKeys.addAll(systemPropertySource.keySet());
+        List<String> sortedKeys = new ArrayList<>(systemPropertySource.keySet());
         Collections.sort(sortedKeys);
 
         for (String key : sortedKeys)
@@ -446,11 +458,8 @@ public class StartArgs
 
     /**
      * Expand any command line added {@code --lib} lib references.
-     *
-     * @throws IOException
-     *             if unable to expand the libraries
      */
-    public void expandSystemProperties() throws IOException
+    public void expandSystemProperties()
     {
         StartLog.debug("Expanding System Properties");
         
@@ -467,7 +476,7 @@ public class StartArgs
     }
     
     /**
-     * Expand any command line added <code>--lib</code> lib references.
+     * Expand any command line added {@code --lib} lib references.
      *
      * @throws IOException
      *             if unable to expand the libraries
@@ -541,6 +550,70 @@ public class StartArgs
         }
     }
 
+    void expandJPMS(List<Module> activeModules) throws IOException
+    {
+        for (Module module : activeModules)
+        {
+            for (String line : module.getJPMS())
+            {
+                line = properties.expand(line);
+                String directive;
+                if (line.startsWith(directive = "add-modules:"))
+                {
+                    String[] names = line.substring(directive.length()).split(",");
+                    Arrays.stream(names).map(String::trim).collect(Collectors.toCollection(() -> jmodAdds));
+                }
+                else if (line.startsWith(directive = "patch-module:"))
+                {
+                    parseJPMSKeyValue(module, line, directive, true, jmodPatch);
+                }
+                else if (line.startsWith(directive = "add-opens:"))
+                {
+                    parseJPMSKeyValue(module, line, directive, false, jmodOpens);
+                }
+                else if (line.startsWith(directive = "add-exports:"))
+                {
+                    parseJPMSKeyValue(module, line, directive, false, jmodExports);
+                }
+                else if (line.startsWith(directive = "add-reads:"))
+                {
+                    parseJPMSKeyValue(module, line, directive, false, jmodReads);
+                }
+                else
+                {
+                    throw new IllegalArgumentException("Invalid [jpms] directive " + directive + " in module " + module.getName() + ": " + line);
+                }
+            }
+        }
+        StartLog.debug("Expanded JPMS directives:%nadd-modules: %s%npatch-modules: %s%nadd-opens: %s%nadd-exports: %s%nadd-reads: %s",
+                jmodAdds, jmodPatch, jmodOpens, jmodExports, jmodReads);
+    }
+
+    private void parseJPMSKeyValue(Module module, String line, String directive, boolean valueIsFile, Map<String, Set<String>> output) throws IOException
+    {
+        String valueString = line.substring(directive.length());
+        int equals = valueString.indexOf('=');
+        if (equals <= 0)
+            throw new IllegalArgumentException("Invalid [jpms] directive " + directive + " in module " + module.getName() + ": " + line);
+        String delimiter = valueIsFile ? File.pathSeparator : ",";
+        String key = valueString.substring(0, equals).trim();
+        String[] values = valueString.substring(equals + 1).split(delimiter);
+        Set<String> result = output.computeIfAbsent(key, k -> new LinkedHashSet<>());
+        for (String value : values)
+        {
+            value = value.trim();
+            if (valueIsFile)
+            {
+                List<Path> paths = baseHome.getPaths(value);
+                paths.stream().map(Path::toAbsolutePath).map(Path::toString).collect(Collectors.toCollection(() -> result));
+            }
+            else
+            {
+                result.add(value);
+            }
+        }
+    }
+
     public List<String> getStartModules()
     {
         return startModules;
@@ -588,7 +661,7 @@ public class StartArgs
             cmd.addRawArg("-Djetty.home=" + baseHome.getHome());
             cmd.addRawArg("-Djetty.base=" + baseHome.getBase());
 
-            for (String x : jvmArgs)
+            for (String x : getJvmArgs())
             {
                 if (x.startsWith("-D"))
                 {            
@@ -612,9 +685,64 @@ public class StartArgs
                 cmd.addEqualsArg("-D" + propKey,value);
             }
 
-            cmd.addRawArg("-cp");
-            cmd.addRawArg(classpath.toString());
-            cmd.addRawArg(getMainClassname());
+            if (isJPMS())
+            {
+                Map<Boolean, List<File>> dirsAndFiles = StreamSupport.stream(classpath.spliterator(), false)
+                        .collect(Collectors.groupingBy(File::isDirectory));
+                List<File> files = dirsAndFiles.get(false);
+                if (files != null && !files.isEmpty())
+                {
+                    cmd.addRawArg("--module-path");
+                    String modules = files.stream()
+                            .map(File::getAbsolutePath)
+                            .collect(Collectors.joining(File.pathSeparator));
+                    cmd.addRawArg(modules);
+                }
+                List<File> dirs = dirsAndFiles.get(true);
+                if (dirs != null && !dirs.isEmpty())
+                {
+                    cmd.addRawArg("--class-path");
+                    String directories = dirs.stream()
+                            .map(File::getAbsolutePath)
+                            .collect(Collectors.joining(File.pathSeparator));
+                    cmd.addRawArg(directories);
+                }
+
+                if (!jmodAdds.isEmpty())
+                {
+                    cmd.addRawArg("--add-modules");
+                    cmd.addRawArg(String.join(",", jmodAdds));
+                }
+                for (Map.Entry<String, Set<String>> entry : jmodPatch.entrySet())
+                {
+                    cmd.addRawArg("--patch-module");
+                    cmd.addRawArg(entry.getKey() + "=" + String.join(File.pathSeparator, entry.getValue()));
+                }
+                for (Map.Entry<String, Set<String>> entry : jmodOpens.entrySet())
+                {
+                    cmd.addRawArg("--add-opens");
+                    cmd.addRawArg(entry.getKey() + "=" + String.join(",", entry.getValue()));
+                }
+                for (Map.Entry<String, Set<String>> entry : jmodExports.entrySet())
+                {
+                    cmd.addRawArg("--add-exports");
+                    cmd.addRawArg(entry.getKey() + "=" + String.join(",", entry.getValue()));
+                }
+                for (Map.Entry<String, Set<String>> entry : jmodReads.entrySet())
+                {
+                    cmd.addRawArg("--add-reads");
+                    cmd.addRawArg(entry.getKey() + "=" + String.join(",", entry.getValue()));
+                }
+
+                cmd.addRawArg("--module");
+                cmd.addRawArg(getMainClassname());
+            }
+            else
+            {
+                cmd.addRawArg("-cp");
+                cmd.addRawArg(classpath.toString());
+                cmd.addRawArg(getMainClassname());
+            }
         }
 
        
@@ -657,8 +785,8 @@ public class StartArgs
 
     public String getMainClassname()
     {
-        String mainclass = System.getProperty("jetty.server",SERVER_MAIN);
-        return System.getProperty("main.class",mainclass);
+        String mainClass = System.getProperty("jetty.server", isJPMS() ? MODULE_MAIN_CLASS : MAIN_CLASS);
+        return System.getProperty("main.class", mainClass);
     }
 
     public String getMavenLocalRepoDir()
@@ -765,6 +893,11 @@ public class StartArgs
         return createFiles;
     }
 
+    public boolean isJPMS()
+    {
+        return jpms;
+    }
+
     public boolean isDryRun()
     {
         return dryRun;
@@ -782,7 +915,7 @@ public class StartArgs
 
     public boolean isNormalMainClass()
     {
-        return SERVER_MAIN.equals(getMainClassname());
+        return MAIN_CLASS.equals(getMainClassname());
     }
 
     public boolean isHelp()
@@ -974,6 +1107,14 @@ public class StartArgs
             return;
         }
 
+        if ("--jpms".equals(arg))
+        {
+            jpms = true;
+            // Need to fork because we cannot use JDK 9 Module APIs.
+            exec = true;
+            return;
+        }
+
         if ("--dry-run".equals(arg) || "--exec-print".equals(arg))
         {
             dryRun = true;
@@ -1084,10 +1225,7 @@ public class StartArgs
         if (arg.startsWith("--skip-file-validation="))
         {
             List<String> moduleNames = Props.getValues(arg);
-            for (String moduleName : moduleNames)
-            {
-                skipFileValidationModules.add(moduleName);
-            }
+            skipFileValidationModules.addAll(moduleNames);
             return;
         }
 
@@ -1231,12 +1369,7 @@ public class StartArgs
         for (String moduleName : moduleNames)
         {
             modules.add(moduleName);
-            List<String> list = sources.get(moduleName);
-            if (list == null)
-            {
-                list = new ArrayList<>();
-                sources.put(moduleName,list);
-            }
+            List<String> list = sources.computeIfAbsent(moduleName, k -> new ArrayList<>());
             list.add(source);
         }
     }
@@ -1327,17 +1460,7 @@ public class StartArgs
     @Override
     public String toString()
     {
-        StringBuilder builder = new StringBuilder();
-        builder.append("StartArgs [enabledModules=");
-        builder.append(modules);
-        builder.append(", xmlRefs=");
-        builder.append(xmlRefs);
-        builder.append(", properties=");
-        builder.append(properties);
-        builder.append(", jvmArgs=");
-        builder.append(jvmArgs);
-        builder.append("]");
-        return builder.toString();
+        return String.format("%s[enabledModules=%s, xmlRefs=%s, properties=%s, jvmArgs=%s]",
+                getClass().getSimpleName(), modules, xmlRefs, properties, jvmArgs);
     }
-    
 }
